fix spacing and margin note bg

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -732,7 +732,7 @@ body {
     transition: .3s ease-in;
     cursor: pointer;
     margin-top: -12%;
-    background-color: #F6F4F3;
+    background-color: #ededed;
 }
 
 .margin-triger svg {
@@ -741,7 +741,7 @@ body {
 }
 
 .margin-triger:hover {
-    background-color: #F6F4F3;
+    background-color: #ededed;
     -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
@@ -2000,7 +2000,6 @@ article.post-card.post.tag-type.tag-words:first-child .post-card-image-link img 
         margin-left: 0;
         margin-right: 0;
         max-width: 100%;
-        margin-top: 20rem;
     }
 }
 
